2017-04-17  Markus Gans  <guru.mail@muenster.de>
	* Speed up FString::setNumber() by using a decimal 
	  string lookup table
	* FString allocates no new memory if the size sufficient

2017-04-15  Markus Gans  <guru.mail@muenster.de>
	* Fix unsigned integer underflow in FString::_insert()

2017-04-14  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles also under OpenBSD
	* The alt key now always generates an esc prefix 
	  on an OpenBSD and a NetBSD console

2017-04-11  Markus Gans  <guru.mail@muenster.de>
	* Enable xterm "metaSendsEscape" switch

2017-04-09  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles now also under NetBSD
	* Rename preprocessor macro names with leading underscore

2017-04-08  Markus Gans  <guru.mail@muenster.de>
	* Looking in /etc/ttys for the type of terminal

2017-04-06  Markus Gans  <guru.mail@muenster.de>
	* Change cursor style on a FreeBSD console

2017-04-05  Markus Gans  <guru.mail@muenster.de>
	* Replace non-printable characters for Tera Term and 
	  Cygwin terminal directly at start-up. Special cases 
	  in the code are no longer necessary.
	* New Method setInsertCursorStyle() to change the appearance 
	  of a cursor

2017-04-02  Markus Gans  <guru.mail@muenster.de>
	* Remap the meta key to left alt key at runtime 
	  on the FreeBSD console for the accelerator key access
	  (Console switching is still possible with 
	   Ctrl-Alt-F1 through Ctrl-Alt-F8)
	* Avoid non-printable ASCII codes < 0x1c on a FreeBSD console

2017-03-30  Markus Gans  <guru.mail@muenster.de>
	* Fixed bug: termcap "me" does not reset 
	  the alternate character set

2017-03-28  Markus Gans  <guru.mail@muenster.de>
	* Improved graphic charset pairs (vt100) 
	  for FreeBSD console

2017-03-26  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut compiles now under FreeBSD
	* A new test program to show the termcap variables

2017-03-19  Markus Gans  <guru.mail@muenster.de>
	* Add the "mouse" example to illustrate mouse programming
