@@ -57,7 +57,7 @@ class FListBoxItem
    FListBoxItem& operator = (const FListBoxItem&);
 
    // Accessors
-   virtual FString getText() const;
+   virtual FString& getText();
    virtual FWidget::data_ptr getData() const;
 
  protected:
@@ -80,7 +80,7 @@ class FListBoxItem
 
 // FListBoxItem inline functions
 //----------------------------------------------------------------------
-inline FString FListBoxItem::getText() const
+inline FString& FListBoxItem::getText()
 { return text; }
 
 //----------------------------------------------------------------------
@@ -106,11 +106,16 @@ inline void FListBoxItem::setData (FWidget::data_ptr data)
 class FListBox : public FWidget
 {
  public:
+   // Typedef
+   typedef std::vector<FListBoxItem> listBoxItems;
+
    // Using-declaration
    using FWidget::setGeometry;
 
    // Constructor
    explicit FListBox (FWidget* = 0);
+   template <class Iterator, class InsertConverter>
+   FListBox (Iterator, Iterator, InsertConverter, FWidget* = 0);
 
    // Destructor
   ~FListBox();
@@ -118,16 +123,21 @@ class FListBox : public FWidget
    // Accessors
    const char*  getClassName() const;
    uInt         getCount() const;
-   FListBoxItem getItem (int) const;
+   FListBoxItem getItem (int);
+   FListBoxItem getItem (listBoxItems::iterator) const;
    int          currentItem() const;
    FString&     getText();
 
    // Mutators
    void         setCurrentItem (int);
+   void         setCurrentItem (listBoxItems::iterator);
    void         selectItem (int);
+   void         selectItem (listBoxItems::iterator);
    void         unselectItem (int);
+   void         unselectItem (listBoxItems::iterator);
    void         showInsideBrackets (int, fc::brackets_type);
    void         showNoBrackets (int);
+   void         showNoBrackets (listBoxItems::iterator);
    void         setGeometry (int, int, int, int, bool = true);
    void         setMultiSelection (bool);
    void         setMultiSelection ();
@@ -142,16 +152,21 @@ class FListBox : public FWidget
    void         setText (const FString&);
 
    // Inquiries
-   bool         isSelected (int) const;
+   bool         isSelected (int);
+   bool         isSelected (listBoxItems::iterator) const;
    bool         isMultiSelection() const;
-   bool         hasBrackets (int) const;
+   bool         hasBrackets (int);
+   bool         hasBrackets (listBoxItems::iterator) const;
 
    // Methods
    void         hide();
+   template <class Iterator, class InsertConverter>
+   void         insert (Iterator, Iterator, InsertConverter);
+   void         insert (FListBoxItem);
    void         insert ( const FString&
                        , fc::brackets_type = fc::NoBrackets
                        , bool = false
-                       , data_ptr = 0);
+                       , data_ptr = 0 );
    void         insert ( long
                        , fc::brackets_type = fc::NoBrackets
                        , bool = false
@@ -180,9 +195,6 @@ class FListBox : public FWidget
    void adjustSize();
 
  private:
-   // Typedef
-   typedef std::vector<FListBoxItem> listBoxItem;
-
    // Enumeration
    enum dragScroll
    {
@@ -199,6 +211,10 @@ class FListBox : public FWidget
    // Disable assignment operator (=)
    FListBox& operator = (const FListBox&);
 
+   // Accessors
+   static FString& getString_FListBoxItem (listBoxItems::iterator);
+   static FString& (*getString)(listBoxItems::iterator);
+
    // Methods
    void        init();
    void        draw();
@@ -207,32 +223,69 @@ class FListBox : public FWidget
    void        processClick();
    void        processSelect();
    void        processChanged();
+   listBoxItems::iterator index2iterator (int);
 
    // Data Members
-   listBoxItem data;
-   FScrollbar* vbar;
-   FScrollbar* hbar;
-   FString     text;
-   FString     inc_search;
-   bool        multi_select;
-   bool        mouse_select;
-   dragScroll  drag_scroll;
-   bool        scroll_timer;
-   int         scroll_repeat;
-   int         scroll_distance;
-   int         current;
-   int         last_current;
-   int         secect_from_item;
-   int         xoffset;
-   int         yoffset;
-   int         last_yoffset;
-   int         nf_offset;
-   int         max_line_width;
+   listBoxItems data;
+   FScrollbar*  vbar;
+   FScrollbar*  hbar;
+   FString      text;
+   FString      inc_search;
+   bool         multi_select;
+   bool         mouse_select;
+   dragScroll   drag_scroll;
+   bool         scroll_timer;
+   int          scroll_repeat;
+   int          scroll_distance;
+   int          current;
+   int          last_current;
+   int          secect_from_item;
+   int          xoffset;
+   int          yoffset;
+   int          last_yoffset;
+   int          nf_offset;
+   int          max_line_width;
 };
 #pragma pack(pop)
 
 
 // FListBox inline functions
+//----------------------------------------------------------------------
+template <class Iterator, class InsertConverter>
+inline FListBox::FListBox ( Iterator first
+                          , Iterator last
+                          , InsertConverter convert
+                          , FWidget* parent )
+  : FWidget(parent)
+  , data()
+  , vbar(0)
+  , hbar(0)
+  , text()
+  , inc_search()
+  , multi_select(false)
+  , mouse_select(false)
+  , drag_scroll(FListBox::noScroll)
+  , scroll_timer(false)
+  , scroll_repeat(100)
+  , scroll_distance(1)
+  , current(0)
+  , last_current(-1)
+  , secect_from_item(-1)
+  , xoffset(0)
+  , yoffset(0)
+  , last_yoffset(-1)
+  , nf_offset(0)
+  , max_line_width(0)
+{
+  init();
+
+  while ( first != last )
+  {
+    insert(convert(first), fc::NoBrackets, false, &(*first));
+    ++first;
+  }
+}
+
 //----------------------------------------------------------------------
 inline const char* FListBox::getClassName() const
 { return "FListBox"; }
@@ -242,8 +295,15 @@ inline uInt FListBox::getCount() const
 { return uInt(data.size()); }
 
 //----------------------------------------------------------------------
-inline FListBoxItem FListBox::getItem (int index) const
-{ return data[uInt(index-1)]; }
+inline FListBoxItem FListBox::getItem (int index) //const
+{
+  listBoxItems::iterator iter = index2iterator(index - 1);
+  return *iter;
+}
+
+//----------------------------------------------------------------------
+inline FListBoxItem FListBox::getItem (listBoxItems::iterator iter) const
+{ return *iter; }
 
 //----------------------------------------------------------------------
 inline int FListBox::currentItem() const
@@ -255,15 +315,27 @@ inline FString& FListBox::getText()
 
 //----------------------------------------------------------------------
 inline void FListBox::selectItem (int index)
-{ data[uInt(index-1)].selected = true; }
+{ index2iterator(index - 1)->selected = true; }
+
+//----------------------------------------------------------------------
+inline void FListBox::selectItem (listBoxItems::iterator iter)
+{ iter->selected = true; }
 
 //----------------------------------------------------------------------
 inline void FListBox::unselectItem (int index)
-{ data[uInt(index-1)].selected = false; }
+{ index2iterator(index - 1)->selected = false; }
 
 //----------------------------------------------------------------------
-inline void FListBox::showNoBrackets(int index)
-{ data[uInt(index-1)].brackets = fc::NoBrackets; }
+inline void FListBox::unselectItem (listBoxItems::iterator iter)
+{ iter->selected = false; }
+
+//----------------------------------------------------------------------
+inline void FListBox::showNoBrackets (int index)
+{ index2iterator(index - 1)->brackets = fc::NoBrackets; }
+
+//----------------------------------------------------------------------
+inline void FListBox::showNoBrackets (listBoxItems::iterator iter)
+{ iter->brackets = fc::NoBrackets; }
 
 //----------------------------------------------------------------------
 inline void FListBox::setMultiSelection (bool on)
@@ -298,15 +370,44 @@ inline bool FListBox::unsetFocus()
 { return setFocus(false); }
 
 //----------------------------------------------------------------------
-inline bool FListBox::isSelected (int index) const
-{ return data[uInt(index-1)].selected; }
+inline bool FListBox::isSelected (int index)
+{ return index2iterator(index - 1)->selected; }
+
+//----------------------------------------------------------------------
+inline bool FListBox::isSelected (listBoxItems::iterator iter) const
+{ return iter->selected; }
 
 //----------------------------------------------------------------------
 inline bool FListBox::isMultiSelection() const
 { return multi_select; }
 
 //----------------------------------------------------------------------
-inline bool FListBox::hasBrackets(int index) const
-{ return bool(data[uInt(index-1)].brackets > 0); }
+inline bool FListBox::hasBrackets(int index)
+{ return bool(index2iterator(index - 1)->brackets > 0); }
+
+//----------------------------------------------------------------------
+inline bool FListBox::hasBrackets(listBoxItems::iterator iter) const
+{ return bool(iter->brackets > 0); }
+
+//----------------------------------------------------------------------
+template <class Iterator, class InsertConverter>
+inline void FListBox::insert ( Iterator first
+                             , Iterator last
+                             , InsertConverter convert )
+{
+  while ( first != last )
+  {
+    insert (convert(first), fc::NoBrackets, false, &(*first));
+    ++first;
+  }
+}
+
+//----------------------------------------------------------------------
+inline FListBox::listBoxItems::iterator FListBox::index2iterator (int index)
+{
+  listBoxItems::iterator iter = data.begin();
+  std::advance (iter, index);
+  return iter;
+}
 
 #endif  // FLISTBOX_H
