@@ -10,6 +10,7 @@ noinst_PROGRAMS = \
 	dialog \
 	input-dialog \
 	choice \
+	listbox \
 	opti-move \
 	termcap \
 	string-operations \
@@ -30,6 +31,7 @@ hello_SOURCES = hello.cpp
 dialog_SOURCES = dialog.cpp
 input_dialog_SOURCES = input-dialog.cpp
 choice_SOURCES = choice.cpp
+listbox_SOURCES = listbox.cpp
 opti_move_SOURCES = opti-move.cpp
 string_operations_SOURCES = string-operations.cpp
 mandelbrot_SOURCES = mandelbrot.cpp
