@@ -1,7 +1,13 @@
+2017-04-23  Markus Gans  <guru.mail@muenster.de>
+	* Import of data from a standard container in FListBox 
+	  is now possible
+	* The new "listbox" example shows the handling with 
+	  standard containers
+
 2017-04-17  Markus Gans  <guru.mail@muenster.de>
 	* Speed up FString::setNumber() by using a decimal 
 	  string lookup table
-	* FString allocates no new memory if the size sufficient
+	* FString allocates no new memory if the size in sufficient
 
 2017-04-15  Markus Gans  <guru.mail@muenster.de>
 	* Fix unsigned integer underflow in FString::_insert()
